# dioxus-floating

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  rust.yml
src/: floating.rs  lib.rs  scrollable_view.rs
