[package]
name = "dioxus-floating"
version = "0.1.0"
edition = "2024"
authors = ["Alexandr <flatbusy@gmail.com>"]
description = "A floating positioning engine for Dioxus 0.7. Handles flips, shifts, and scrollable containers with ease."
repository = "https://github.com/Blarx/dioxus-floating"
license = "MIT OR Apache-2.0"
keywords = ["dioxus", "ui", "floating", "dropdown", "context-menu"]
categories = ["gui", "web-programming"]
readme = "README.md"

[dependencies]
dioxus = { version = "0.7" }
gloo-timers = { version = "0.3", features = ["futures"] }
